<resources>
    <string name="app_name">vinilos</string>
    <string name="home_hero_title">Vinilos</string>
    <string name="home_hero_subtitle">Tu catálogo musical</string>
    <string name="home_card_albums">Albums Catalogue</string>
    <string name="home_card_artists">Artists List</string>
    <string name="artist_birth_year">b. %1$s</string>
    <string name="artist_about">About</string>
    <string name="artist_albums">Albums</string>
    <string name="artist_no_albums">No albums registered.</string>
    <string name="released_album_detail">Released</string>
    <string name="genre">Genre</string>
    <string name="label">Label</string>
    <string name="tracks_album_detail">Tracks</string>
    <string name="cd_nav_back">Navegar atrás</string>
</resources>