...
            app:navigationContentDescription="@string/cd_nav_back"
            app:menu="@menu/menu_home_action"
            style="@style/Widget.Material3.Toolbar.Surface" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvAlbums"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_md"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

...
